# unh_marine_navigation

./: CMakeLists.txt  README.md  behavior_plugin.xml  crabbing_path_follower_plugin.xml  navigator_plugin.xml  package.xml  plugins_list.hpp.in  project11_navigation_tree_nodes.xml
marine_nav_avoidance_controller/: CMakeLists.txt  package.xml  plugin.xml
marine_nav_avoidance_controller/include/marine_nav_avoidance_controller/: avoidance_controller.h
marine_nav_avoidance_controller/src/: avoidance_controller.cpp
marine_nav_avoidance_controller/test/: test_avoidance_control.cpp
marine_nav_behavior_tree/: CMakeLists.txt  package.xml  plugins_list.hpp.in
marine_nav_behavior_tree/include/marine_nav_behavior_tree/: bt_types.h
marine_nav_behavior_tree/include/marine_nav_behavior_tree/plugins/action/: add_sub_task.h  adjust_path_for_obstacles.h  clear_path.h  fix_path_orientations.h  follow_path_cancel_node.h  get_sub_path.h  get_sub_tasks.h  get_task_data_double.h  get_task_data_string.h  hover_action.h  hover_cancel_node.h  path_to_pose_vector.h  predict_stopping_pose.h  set_controller_speed.h  set_path_from_task.h  set_polygon_from_task.h  set_task_done.h  set_task_failed.h  sonar_coverage_action.h  sonar_coverage_cancel_node.h  update_current_task.h
marine_nav_behavior_tree/include/marine_nav_behavior_tree/plugins/condition/: all_tasks_done.h  has_sub_tasks.h  path_empty.h  robot_on_path.h
marine_nav_behavior_tree/include/marine_nav_behavior_tree/plugins/decorator/: restart_on_task_change.h
marine_nav_behavior_tree/src/: bt_register_nodes.cpp  bt_types.cpp  generate_marine_nav_behavior_tree_nodes_xml.cpp
marine_nav_behavior_tree/src/plugins/action/: add_sub_task.cpp  adjust_path_for_obstacles.cpp  clear_path.cpp  fix_path_orientations.cpp  follow_path_cancel_node.cpp  get_sub_path.cpp  get_sub_tasks.cpp  get_task_data_double.cpp  get_task_data_string.cpp  hover_action.cpp  hover_cancel_node.cpp  path_to_pose_vector.cpp  predict_stopping_pose.cpp  set_controller_speed.cpp  set_path_from_task.cpp  set_polygon_from_task.cpp  set_task_done.cpp  set_task_failed.cpp  sonar_coverage_action.cpp  sonar_coverage_cancel_node.cpp  update_current_task.cpp
marine_nav_behavior_tree/src/plugins/condition/: all_tasks_done.cpp  has_sub_tasks.cpp  path_empty.cpp  robot_on_path.cpp
marine_nav_behavior_tree/src/plugins/decorator/: restart_on_task_change.cpp
marine_nav_behavior_tree/test/: test_adjust_path_for_obstacles.cpp  test_dispatch_routing.cpp  test_get_sub_path.cpp  test_goto_reentry.cpp  test_hover_reentry.cpp  test_predict_stopping_pose.cpp  test_robot_on_path.cpp  test_set_controller_speed_resolve.cpp  test_set_path_from_task.cpp  test_set_task_failed.cpp
marine_nav_behaviors/: CMakeLists.txt  behavior_plugin.xml  package.xml
marine_nav_behaviors/include/marine_nav_behaviors/: hover.h  hover_heading.h  hover_speed.h
marine_nav_behaviors/src/: hover.cpp
marine_nav_behaviors/test/: test_hover_heading.cpp  test_hover_speed.cpp  test_hover_visualization.cpp
marine_nav_bt_task_navigator/: CMakeLists.txt  navigator_plugin.xml  package.xml
marine_nav_bt_task_navigator/behavior_trees/: nav2.btproj  run_tasks.xml
marine_nav_bt_task_navigator/include/marine_nav_bt_task_navigator/: task_navigator.h
marine_nav_bt_task_navigator/src/: task_navigator.cpp
marine_nav_ca_safety/: CMakeLists.txt  README.md  package.xml
marine_nav_ca_safety/include/marine_nav_ca_safety/: ca_safety.h  ca_safety_node.h
marine_nav_ca_safety/src/: ca_safety_node.cpp
marine_nav_ca_safety/test/: test_ca_safety.cpp  test_ca_safety_control.py  test_ca_safety_launch.py  test_ca_safety_node.cpp
marine_nav_crabbing_path_follower/: CMakeLists.txt  package.xml  plugin.xml
marine_nav_crabbing_path_follower/include/marine_nav_crabbing_path_follower/: crabbing_path_follower.h  path_geometry.hpp
marine_nav_crabbing_path_follower/src/: crabbing_path_follower.cpp
marine_nav_crabbing_path_follower/test/: test_crabbing_control.cpp  test_curvature_speed_factor.cpp  test_gain_schedule.cpp  test_path_geometry.cpp  test_turn_speed_factor.cpp
marine_nav_interfaces/: CMakeLists.txt  package.xml
marine_nav_interfaces/action/: ComputeSonarCoveragePath.action  Hover.action  RunTasks.action
marine_nav_interfaces/msg/: TaskInformation.msg
marine_nav_tasks/: CMakeLists.txt  package.xml
marine_nav_tasks/include/marine_nav_tasks/: task.h  task_list.h
marine_nav_tasks/marine_nav_tasks/: task.py  task_list.py
marine_nav_tasks/src/: task.cpp  task_list.cpp
marine_nav_utilities/: CMakeLists.txt  package.xml
marine_nav_utilities/include/marine_nav_utilities/: corridor_solver.h  costmap_window.h  costmap_window_node.h  utilities.h
marine_nav_utilities/include/marine_nav_utilities/gz4d/: angles.hpp  box.hpp  ellipsoid.hpp  geo.hpp  gz4d.hpp  matrix.hpp  transforms.hpp  utilities.hpp  vector.hpp  wgs84.hpp
marine_nav_utilities/src/: corridor_solver.cpp  costmap_window.cpp  costmap_window_node.cpp  utilities.cpp
marine_nav_utilities/test/: test_corridor_solver.cpp  test_costmap_window.cpp  test_costmap_window_node.cpp
project11_navigation/: CMakeLists.txt  package.xml  project11_navigation_tree_nodes.xml  task.py  task_list.py
project11_navigation/behavior_trees/: navigate_through_poses.xml
project11_navigation/doc/: sonar_coverage.md
project11_navigation/include/project11_navigation/: context.h  navigator.h  navigator_settings.h  occupancy_grid.h  robot.h
project11_navigation/include/project11_navigation/plugins/action/: pose_vector_to_path.h  set_pose_from_task.h  task_list_updater.h  visualize_trajectory.h
project11_navigation/launch/: navigator_launch.py
project11_navigation/plugins/action/: baxevani_controller.cpp  debug_blackboard.cpp  generate_plan.cpp  pose_vector_to_path.cpp  predict_stopping_pose.cpp  set_trajectory_from_task.cpp  task_list_updater.cpp
project11_navigation/src/: context.cpp  main.cpp  navigator.cpp  navigator_settings.cpp  occupancy_grid.cpp  robot.cpp  robot_capabilities.cpp
project11_navigation/src/tools/: occupancy_vector_map_from_geo.cpp
(+120 files in other folders)
