<?xml version="1.0"?>
<package format="2">
  <name>project11_navigation</name>
  <version>0.0.0</version>
  <description>The Project11 Navigation stack package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>dubins_curves</depend>
  <depend>grid_map_ros</depend>
  <depend>nav2_util</depend>
  <depend>project11</depend>
  <depend>project11_nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml_cpp_vendor</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <behaviortree_cpp bt_lib_plugin="libproject11_navigation_bt_plugins"/>
  </export>
</package>
