<?xml version="1.0"?>
<package format="2">
  <name>marine_nav_avoidance_controller</name>
  <version>0.0.0</version>
  <description>
    Nav2 decorator controller that reshapes the followed path around obstacles
    (corridor solve over the local costmap) and delegates tracking to an inner
    controller. Survey-line obstacle avoidance, hosted at the control layer.
  </description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>marine_control</depend>
  <depend>marine_nav_utilities</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>marine_control_interfaces</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
