<?xml version="1.0"?>
<package format="2">
  <name>marine_nav_behavior_tree</name>
  <version>0.0.0</version>
  <description>Nav2 behavior tree nodes useful for marine navigation</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>marine_nav_interfaces</depend>
  <depend>marine_nav_tasks</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_util</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <behaviortree_cpp bt_lib_plugin="libmarine_nav_behavior_tree_plugins"/>
  </export>
</package>
