<?xml version="1.0"?>
<package format="2">
  <name>marine_nav_behaviors</name>
  <version>0.0.0</version>
  <description>Nav2 behavior plugins useful for marine navigation</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>marine_nav_interfaces</depend>
  <depend>nav2_behaviors</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/behavior_plugin.xml"/>
  </export>
</package>
